# geant

./: .gitignore  README.md  setup.csh
common/: Mu3eMuonInternalConversionDecayWithSpin.cc  Mu3eMuonRadiativeDecayChannelWithSpin.cc  MuDecayChannel.cc  MuDecayChannel.hh  double.hh  math.hh  musrMuEnergyLossLandau.cc  musrMuEnergyLossLandau.hh  musrMuFormation.cc  musrMuFormation.hh  musrMuScatter.cc  musrMuStop.cc  musrMuonium.cc
fibres/: README  fee.cc  vis.mac
fibres/src/: B1DetectorConstruction.cc
macs0/: CMakeLists.txt  Mugun.mac  README  commands.mac  egun.mac  init_vis.mac  readHits.cc  run.mac  runG4.cc  runJobs.csh  vis.mac
macs0/ana/: Makefile  plotResults.cc  plotResults.hh  runPlot.cc  treeReader01.cc  treeReader01.hh  treeReader01.icc
macs0/include/: ChamberParameterisation.hh  Classes.hh  DetectorConstruction.hh  DetectorMessenger.hh  ElectricFieldSetup.hh  EventAction.hh  MCPHit.hh  MCPSD.hh  MagneticField.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RootIO.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TGenCand.hh  TGenVtx.hh  TrackInformation.hh  TrackerHit.hh  TrackerSD.hh  Trajectory.hh  rEvent.hh
macs0/macros/: Makefile  runTreeReader01.cc  treeReader01.cc  treeReader01.icc
macs0/run/: init_vis.mac
macs0/src/: ChamberParameterisation.cc  DetectorConstruction.cc  DetectorMessenger.cc  ElectricFieldSetup.cc  EventAction.cc  MCPHit.cc  MCPSD.cc  MagneticField.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  StackingAction.cc  SteppingVerbose.cc  TGenCand.cc  TGenVtx.cc  THit.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc  Trajectory.cc  rEvent.cc
macs0/swift/: mkMacFiles.swift  runTreeReader.swift
macs0/xml/: selection.xml
mu3e/fibres/: CMakeLists.txt  cf.cc  smb.cc  vis.mac
mu3e/fibres/include/: B1DetectorConstruction.hh  B2DetectorConstruction.hh  B3DetectorConstruction.hh
mu3e/fibres/src/: B1DetectorConstruction.cc  B2DetectorConstruction.cc  B3DetectorConstruction.cc
muamu/common/: Mu3eMuonInternalConversionDecayWithSpin.hh  Mu3eMuonRadiativeDecayChannelWithSpin.hh  MuDecayChannel.cc  float.hh  musrMuEnergyLossLandau.hh  musrMuFormation.cc  musrMuFormation.hh  musrMuStop.hh  musrMuonium.hh  rambo.hh  rand.hh
muamu/macs0/: CMakeLists.txt  GNUmakefile  commands.mac  init_vis.mac  run.mac
muamu/macs0/ana/: Makefile  plot1.C  plotResults.cc  plotResults.hh  treeReader01.cc
muamu/macs0/include/: DetectorMessenger.hh  ElectricFieldSetup.hh  F02ElectricFieldSetup.hh  MCPHit.hh  MCPSD.hh  MagneticField.hh  PrimaryGeneratorAction.hh  RegionInformation.hh  RootIO.hh  StackingAction.hh  SteppingVerbose.hh  THit.hh  TrackerSD.hh  TrackingAction.hh  Trajectory.hh
muamu/macs0/src/: MCPHit.cc  MagneticField.cc  PhysicsList.cc  RegionInformation.cc  RootIO.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TGenCand.cc  TrackInformation.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc  Trajectory.cc
muamu/macs0/swift/: runTreeReader.swift
muamu/macs0/xml/: selection.xml
test0/include/: MuDecayChannel.hh
test0/src/: B2PrimaryGeneratorAction.cc  musrMuonium.cc
test1/: CMakeLists.txt  README  example.in  exe.cc  readHits.C  run.mac  runG4.cc  vis.mac
test1/include/: ChamberParameterisation.hh  Classes.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RootIO.hh  TGenCand.hh  THit.hh  TrackerHit.hh  TrackerSD.hh  rEvent.hh
test1/src/: ChamberParameterisation.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RootIO.cc  RunAction.cc  SteppingAction.cc  TGenCand.cc  THit.cc  TrackerHit.cc  TrackerSD.cc  rEvent.cc
test1/xml/: selection.xml
